# jobseeker

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Dockerfile  IMPLEMENTATION_STATUS.md  MANIFEST.json  Makefile  README.md  alembic.ini  compose.yaml  pyproject.toml
.codex/: config.toml
alembic/: env.py
config/: models.example.yaml  notifications.example.yaml  pilot.example.yaml  platform_policy.example.yaml  platform_policy.yaml  profile.example.yaml  profile.yaml  retention.example.yaml  scoring.example.yaml  scoring.yaml  sources.example.yaml
docs/: 00-(index).md  00-index.md  01-(project-charter-and-scope).md  01-project-charter-and-scope.md  02-compliance-and-platform-policy-registry.md  03-positioning-profile-and-success-metrics.md  04-local-environment-and-repository-bootstrap.md  05-architecture-boundaries-and-state-machines.md  06-database-schema-and-migrations.md  07-source-adapter-framework.md  10-llm-gateway-and-structured-scoring.md  11-(portfolio-knowledge-base-and-retrieval).md  12-proposal-generation-and-factuality-guardrails.md  13-human-review-dashboard-and-notifications.md  17-(security-secrets-privacy-and-retention).md  19-observability-cost-controls-and-operations.md  20-(local-deployment-startup-backup-and-recovery).md  21-(codex-implementation-workflow-and-release-discipline).md  21-codex-implementation-workflow-and-release-discipline.md  90-(data-contracts-and-json-schemas).md  91-configuration-reference.md  92-(codex-prompt-library).md  92-codex-prompt-library.md  97-glossary.md  (+16 more)
(+86 files in other folders)
