[project]
name = "job-agent"
version = "0.22.0"
description = "Local human-in-the-loop freelance job discovery and proposal assistant"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.111", "uvicorn>=0.30", "pydantic>=2.7", "pydantic-settings>=2.3", "PyYAML>=6.0",
  "typer>=0.12", "SQLAlchemy>=2.0", "alembic>=1.13", "celery>=5.4", "redis>=5.0", "jinja2>=3.1",
  "httpx>=0.27", "bleach>=6.1", "python-dateutil>=2.9"
]
[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5", "mypy>=1.10"]
[project.scripts]
job-agent = "job_agent.cli:main"
[tool.ruff]
line-length = 100
src = ["src", "tests"]
[tool.ruff.lint]
select = ["F"]
[tool.mypy]
python_version = "3.12"
strict = false
mypy_path = "src"
packages = ["job_agent"]
ignore_errors = true
[[tool.mypy.overrides]]
module = ["yaml", "bleach"]
ignore_missing_imports = true
[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
markers = ["live: opt-in live external tests"]
